--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,11 @@ repositories {
     maven { url "https://dl.bintray.com/ethereum/maven/" }
 }
 
+test{
+    testLogging.showStandardStreams = true
+    testLogging.exceptionFormat = 'full'
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.0'
