--- a/build.gradle
+++ b/build.gradle
@@ -22,5 +22,6 @@ dependencies {
     testCompile group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.0'
     implementation 'com.github.stellar:java-stellar-sdk:0.6.0'
     compile 'io.github.novacrypto:Base58:2019.01.27@jar'
+    compile 'com.google.guava:guava:26.0-android'
     implementation "org.ethereum:ethereumj-core:1.9.+"
 }
